# xit2md

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_xit2md.py
xit2md/: __init__.py  __version__.py
