[tool.poetry]
name = "xit2md"
version = "0.2.2"
description = "Convert [x]it! to markdown"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chris48s/xit2md"

[tool.poetry.dependencies]
python = ">=3.8"
stage-left = ">=0.1.1,<0.3.0"

[tool.poetry.dev-dependencies]
isort = "^5.13"
flake8 = { version = "^6.1.0", python = "^3.8.1" }
black = "==23.12.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xit2md = 'xit2md:main'
