[project]
name = "xit2md"
version = "0.3.0"
description = "Convert [x]it! to markdown"
authors = [{name = "chris48s"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "stage-left>=0.3.0,<0.4.0"
]

[project.urls]
Home = "https://github.com/chris48s/xit2md"
Source = "https://github.com/chris48s/xit2md"

[tool.poetry.group.dev.dependencies]
isort = "7.0.0"
flake8 = "7.3.0"
black = "25.9.0"
pytest = "8.4.2"
pytest-cov = "7.0.0"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
xit2md = 'xit2md:main'
